# python-adjutantclient

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
adjutantclient/common/: base.py  http.py
adjutantclient/osc/: plugin.py
adjutantclient/osc/v1/: notifications.py  quota.py  signup.py  status.py  tasks.py  tokens.py  users.py
adjutantclient/tests/v1/: test_client.py
adjutantclient/v1/: client.py  notifications.py  quota.py  roles.py  tasks.py  tokens.py  users.py
releasenotes/notes/: add-mfa-display-2eeb55fbd40d671c.yaml  drop-older-python-support-40b72d5327db9499.yaml
