[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "python-adjutantclient"
description = "Adjutant API Client Library"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = "README.rst"
# NOTE(callumdickinson): PBR only supports the now-deprecated dictionary
# format. With upstream setuptools, this would be simply "Apache-2.0".
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = [
    "openstack",
    "keystone",
    "users",
    "tasks",
    "registration",
    "workflow",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: OpenStack",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Bug Tracker" = "https://storyboard.openstack.org/#!/project/openstack/python-adjutantclient"
Documentation = "https://docs.openstack.org/adjutant/latest"
"Source Code" = "https://opendev.org/openstack/python-adjutantclient"

[project.entry-points."openstack.cli.extension"]
admin_logic = "adjutantclient.osc.plugin"

[project.entry-points."openstack.admin_logic.v1"]
admin_task_list = "adjutantclient.osc.v1.tasks:TaskList"
admin_task_show = "adjutantclient.osc.v1.tasks:TaskShow"
admin_task_approve = "adjutantclient.osc.v1.tasks:TaskApprove"
admin_task_cancel = "adjutantclient.osc.v1.tasks:TaskCancel"
admin_task_update = "adjutantclient.osc.v1.tasks:TaskUpdate"
admin_task_token_reissue = "adjutantclient.osc.v1.tasks:TaskTokenReissue"
admin_task_token_list = "adjutantclient.osc.v1.tokens:TokenList"
admin_task_token_show = "adjutantclient.osc.v1.tokens:TokenShow"
admin_task_token_submit = "adjutantclient.osc.v1.tokens:TokenSubmit"
admin_task_tokens_clear = "adjutantclient.osc.v1.tokens:TokenClear"
admin_task_notification_list = "adjutantclient.osc.v1.notifications:NotificationList"
admin_task_notification_show = "adjutantclient.osc.v1.notifications:NotificationShow"
admin_task_notification_acknowledge = "adjutantclient.osc.v1.notifications:NotificationAcknowledge"
project_user_list = "adjutantclient.osc.v1.users:UserList"
project_user_show = "adjutantclient.osc.v1.users:UserShow"
project_user_invite = "adjutantclient.osc.v1.users:UserInvite"
project_user_invite_cancel = "adjutantclient.osc.v1.users:UserInviteCancel"
project_user_role_list = "adjutantclient.osc.v1.users:UserRoleList"
project_user_role_add = "adjutantclient.osc.v1.users:UserRoleAdd"
project_user_role_remove = "adjutantclient.osc.v1.users:UserRoleRemove"
project_manageable_roles = "adjutantclient.osc.v1.users:ManageableRolesList"
project_quota_show = "adjutantclient.osc.v1.quota:QuotaShow"
project_quota_sizes = "adjutantclient.osc.v1.quota:QuotaSizes"
project_quota_tasks = "adjutantclient.osc.v1.quota:QuotaTasks"
project_quota_update = "adjutantclient.osc.v1.quota:QuotaUpdate"
password_forgot = "adjutantclient.osc.v1.users:PasswordForgot"
password_reset = "adjutantclient.osc.v1.users:PasswordReset"
signup = "adjutantclient.osc.v1.signup:Signup"
adjutant_status = "adjutantclient.osc.v1.status:Status"

[tool.setuptools.packages.find]
include = ["adjutantclient", "adjutantclient.*"]
