[metadata]
name = python-adjutantclient
summary = Adjutant API Client Library
description-file =
    README.rst
author = Adrian Turjak
author-email = adriant@catalyst.net.nz
home-page = https://github.com/openstack/python-adjutantclient
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    adjutantclient

[entry_points]
openstack.cli.extension =
    admin_logic = adjutantclient.osc.plugin

openstack.admin_logic.v1 =
    admin_task_list = adjutantclient.osc.v1.tasks:TaskList
    admin_task_show = adjutantclient.osc.v1.tasks:TaskShow
    admin_task_approve = adjutantclient.osc.v1.tasks:TaskApprove
    admin_task_cancel = adjutantclient.osc.v1.tasks:TaskCancel
    admin_task_update = adjutantclient.osc.v1.tasks:TaskUpdate
    admin_task_token_reissue = adjutantclient.osc.v1.tasks:TaskTokenReissue
    admin_task_token_list = adjutantclient.osc.v1.tokens:TokenList
    admin_task_token_show = adjutantclient.osc.v1.tokens:TokenShow
    admin_task_token_submit = adjutantclient.osc.v1.tokens:TokenSubmit
    admin_task_tokens_clear = adjutantclient.osc.v1.tokens:TokenClear
    admin_task_notification_list = adjutantclient.osc.v1.notifications:NotificationList
    admin_task_notification_show = adjutantclient.osc.v1.notifications:NotificationShow
    admin_task_notification_acknowledge = adjutantclient.osc.v1.notifications:NotificationAcknowledge
    project_user_list = adjutantclient.osc.v1.users:UserList
    project_user_show = adjutantclient.osc.v1.users:UserShow
    project_user_invite = adjutantclient.osc.v1.users:UserInvite
    project_user_invite_cancel = adjutantclient.osc.v1.users:UserInviteCancel
    project_user_role_list = adjutantclient.osc.v1.users:UserRoleList
    project_user_role_add = adjutantclient.osc.v1.users:UserRoleAdd
    project_user_role_remove = adjutantclient.osc.v1.users:UserRoleRemove
    project_manageable_roles = adjutantclient.osc.v1.users:ManageableRolesList
    project_quota_show = adjutantclient.osc.v1.quota:QuotaShow
    project_quota_sizes = adjutantclient.osc.v1.quota:QuotaSizes
    project_quota_tasks = adjutantclient.osc.v1.quota:QuotaTasks
    project_quota_update = adjutantclient.osc.v1.quota:QuotaUpdate
    password_forgot = adjutantclient.osc.v1.users:PasswordForgot
    password_reset = adjutantclient.osc.v1.users:PasswordReset
    signup = adjutantclient.osc.v1.signup:Signup
    adjutant_status = adjutantclient.osc.v1.status:Status

[global]
setup-hooks =
    pbr.hooks.setup_hook
